Fixed links to other pages

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -8,12 +8,10 @@
     <script src="javascript/clientJavascript.js"></script>
 </head>
 <body>
-    <a href="/about">ABOUT</a>
-    <a href="/kittens">KITTENS</a>
-    <a href="/petForm">Add a new pet!</a>
-    <a href="/todos">Todos</a>
-    <hr>
-    <img src="../assets/images/puppies.jpg">
-    <button class="blockCenter" style="margin-top: 10px" type="button" onclick="sendAlert()">Send an alert!</button>
+<a href="/index">HOME</a>
+<a href="/about">ABOUT</a>
+<a href="/todos">TODOS</a>
+<hr>
+    <img src="../assets/images/todolist.jpg">
 </body>
 </html>
