--- a/src/main/resources/public/about.html
+++ b/src/main/resources/public/about.html
@@ -5,9 +5,13 @@
     <title>about</title>
 </head>
 <body>
-    <a href="/">HOME</a>
-    <a href="/kittens">KITTENS</a>
-    <hr>
-    <h1>This is an "about" page!</h1>
+
+<a href="/index">HOME</a>
+<a href="/about">ABOUT</a>
+<a href="/todos">TODOS</a>
+<hr>
+
+    <h1>This site will allow you to filter through hundreds of To-Do, making it easier to stay
+    organized as you complete your tough tasks!</h1>
 </body>
 </html>
