--- a/src/main/resources/public/todos.html
+++ b/src/main/resources/public/todos.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 
-    <button type="button" id="getAllTodos">Get All Todos</button>
+<a href="/index">HOME</a>
+<a href="/about">ABOUT</a>
+<a href="/todos">TODOS</a>
+<hr>
+
+    <button type="button" id="getAllTodos">Generate Todo List</button>
 
     <button class="rightCorner" type="button" onclick="setURL()">Filter List</button>
     <input class="rightCorner" type = "text" id="redirect">
@@ -25,7 +30,7 @@
 
     <hr/>
 
-    <div id="jsonDump" style="margin-top:20px"> Json will go here</div>
+    <div id="jsonDump" style="margin-top:20px">Hit the button above for your list!</div>
 
 
 </body>
