fixed  javascript for proper testing

--- a/src/main/resources/public/todos.html
+++ b/src/main/resources/public/todos.html
@@ -16,16 +16,16 @@
 
     <button type="button" id="getAllTodos">Generate Todo List</button>
 
-    <button class="rightCorner" type="button" onclick="setURL()">Filter List</button>
+    <button class="rightCorner" type="button" onclick="filterList()">Filter List</button>
     <input class="rightCorner" type = "text" id="redirect">
 
     <select class="myDropdown" id="options">
         <option value="/">id</option>
-        <option value="?owner=">owner</option>
-        <option value="?limit=">limit</option>
-        <option value="?status=">status</option>
-        <option value="?contains=">contains</option>
-        <option value="?category=">category</option>
+        <option value="owner">owner</option>
+        <option value="limit">limit</option>
+        <option value="status">status</option>
+        <option value="contains">contains</option>
+        <option value="category">category</option>
     </select>
 
     <hr/>
