Fixed ID filter function

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>kittens</title>
+    <title>Todo Filter Site</title>
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="javascript/clientJavascript.js"></script>
