--- a/src/main/resources/public/todos.html
+++ b/src/main/resources/public/todos.html
@@ -20,7 +20,7 @@
     <input class="rightCorner" type = "text" id="redirect">
 
     <select class="myDropdown" id="options">
-        <option value="/">id</option>
+        <option value="id">id</option>
         <option value="owner">owner</option>
         <option value="limit">limit</option>
         <option value="status">status</option>
